--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!-- Spring Boot -->
@@ -12,11 +12,9 @@
         <relativePath/>
     </parent>
 
-    <groupId>com.dam.cicd</groupId>
-    <artifactId>dam-ci-cd-api-001</artifactId>
-    <version>1.0.0</version>
-    <name>dam-ci-cd-api-001</name>
-    <description>API Spring Boot para CI/CD</description>
+    <groupId>com.da.cicd</groupId>
+    <artifactId>Actividad2_AccesoNube_CI-CD-API</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <java.version>17</java.version>
